--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
         <dependency>
             <groupId>com.github.t1</groupId>
             <artifactId>wunderbar.junit</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
