--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -1,1 +1,7 @@
+# suppress inspection "UnusedProperty" for whole file
 graphql.services: http://localhost:8082/product/graphql
+
+quarkus.log.category."org.jboss.resteasy.microprofile.client.RestClientBuilderImpl".level: ERROR
+quarkus.log.category."io.undertow".level: WARN
+quarkus.log.category."org.xnio".level: WARN
+quarkus.log.category."org.xnio.nio".level: WARN
