add price service

--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -6,3 +6,4 @@ quarkus.log.category."org.jboss.resteasy.microprofile.client.RestClientBuilderIm
 quarkus.log.category."io.undertow".level: WARN
 quarkus.log.category."org.xnio".level: WARN
 quarkus.log.category."org.xnio.nio".level: WARN
+quarkus.log.category."notprivacysafe.graphql".level: DEBUG
