--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -1,5 +1,5 @@
 # suppress inspection "UnusedProperty" for whole file
-graphql.services: http://localhost:8082/graphql
+graphql.services: http://localhost:8082/graphql,http://localhost:8084/graphql
 
 quarkus.log.category."com.github.graphql.feder".level: ALL
 quarkus.log.category."org.jboss.resteasy.microprofile.client.RestClientBuilderImpl".level: ERROR
