configure services with separate config entries containing a name infix

--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -1,9 +1,9 @@
 # suppress inspection "UnusedProperty" for whole file
-graphql.services: http://localhost:8082/graphql,http://localhost:8084/graphql
-
-quarkus.log.category."com.github.graphql.feder".level: ALL
-quarkus.log.category."org.jboss.resteasy.microprofile.client.RestClientBuilderImpl".level: ERROR
-quarkus.log.category."io.undertow".level: WARN
-quarkus.log.category."org.xnio".level: WARN
-quarkus.log.category."org.xnio.nio".level: WARN
-quarkus.log.category."notprivacysafe.graphql".level: DEBUG
+graphql.service.product:http://localhost:8082/graphql
+graphql.service.price:http://localhost:8084/graphql
+quarkus.log.category."com.github.graphql.feder".level:ALL
+quarkus.log.category."org.jboss.resteasy.microprofile.client.RestClientBuilderImpl".level:ERROR
+quarkus.log.category."io.undertow".level:WARN
+quarkus.log.category."org.xnio".level:WARN
+quarkus.log.category."org.xnio.nio".level:WARN
+quarkus.log.category."notprivacysafe.graphql".level:DEBUG
