--- a/pom.xml
+++ b/pom.xml
@@ -23,15 +23,19 @@
 
         <surefire.version>3.0.0-M5</surefire.version>
 
-        <quarkus.version>2.3.0.Final</quarkus.version>
+        <quarkus.version>2.5.0.Final</quarkus.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.20</version>
+            <version>1.18.22</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <defaultGoal>install</defaultGoal>
+    </build>
 </project>
