--- a/demo/product/pom.xml
+++ b/demo/product/pom.xml
@@ -8,6 +8,7 @@
         <groupId>com.github.graphql.feder</groupId>
         <artifactId>feder-demo-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>feder-demo-product</artifactId>
