--- a/demo/product/src/main/resources/META-INF/microprofile-config.properties
+++ b/demo/product/src/main/resources/META-INF/microprofile-config.properties
@@ -5,3 +5,5 @@ smallrye.graphql.events.enabled = true
 smallrye.graphql.schema.includeScalars = true
 smallrye.graphql.schema.includeDirectives = true
 smallrye.graphql.federation.enabled = true
+
+quarkus.http.port = 8082
