--- a/core/pom.xml
+++ b/core/pom.xml
@@ -26,6 +26,13 @@
 
     <dependencies>
         <dependency>
+            <!-- this is just to allow the jakarta package names -->
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <version>9.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-arc</artifactId>
         </dependency>
