--- a/demo/product/pom.xml
+++ b/demo/product/pom.xml
@@ -26,6 +26,11 @@
     </dependencyManagement>
     <dependencies>
         <dependency>
+            <groupId>io.smallrye</groupId>
+            <artifactId>smallrye-graphql-api</artifactId>
+            <version>${smallrye-graphql.version}</version>
+        </dependency>
+        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-smallrye-graphql</artifactId>
         </dependency>
