--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,13 @@
         <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
 
-        <surefire.version>3.0.0-M7</surefire.version>
-
         <quarkus.version>2.13.3.Final</quarkus.version>
         <microprofile-graphql-api.version>2.0</microprofile-graphql-api.version>
         <smallrye-context-propagation.version>2.0.0</smallrye-context-propagation.version>
-        <smallrye-graphql.version>2.0.0.RC12</smallrye-graphql.version>
+        <smallrye-graphql.version>2.0.0.RC11</smallrye-graphql.version>
+
+        <surefire.version>3.0.0-M7</surefire.version>
+        <maven-war-plugin.version>3.3.2</maven-war-plugin.version>
     </properties>
 
     <dependencies>
