--- a/core/src/main/resources/META-INF/microprofile-config.properties
+++ b/core/src/main/resources/META-INF/microprofile-config.properties
@@ -1,9 +1,9 @@
 # suppress inspection "UnusedProperty" for whole file
-graphql.service.product:http://localhost:8082
-graphql.service.price:http://localhost:8083
-quarkus.log.category."com.github.graphql.feder".level:DEBUG
-quarkus.log.category."org.jboss.resteasy.microprofile.client.RestClientBuilderImpl".level:ERROR
-quarkus.log.category."io.undertow".level:WARN
-quarkus.log.category."org.xnio".level:WARN
-quarkus.log.category."org.xnio.nio".level:WARN
-quarkus.log.category."notprivacysafe.graphql".level:DEBUG
+graphql.service.product = http://localhost:8082
+graphql.service.price = http://localhost:8083
+quarkus.log.category."com.github.graphql.feder".level = DEBUG
+quarkus.log.category."org.jboss.resteasy.microprofile.client.RestClientBuilderImpl".level = ERROR
+quarkus.log.category."io.undertow".level = WARN
+quarkus.log.category."org.xnio".level = WARN
+quarkus.log.category."org.xnio.nio".level = WARN
+quarkus.log.category."notprivacysafe.graphql".level = DEBUG
