--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,6 +6,9 @@ on:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        jdk: [ 11, 17 ]
     runs-on: ubuntu-latest
 
     steps:
@@ -13,6 +16,6 @@ jobs:
     - uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
-        java-version: 17
+        java-version: ${{ matrix.jdk }}
         cache: 'maven'
     - run: mvn --batch-mode --show-version --no-transfer-progress install
