--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -23,6 +23,13 @@
           "user-agent": "JS GraphQL"
         },
         "introspect": false
+      },
+      "review": {
+        "url": "http://localhost:8084/graphql",
+        "headers": {
+          "user-agent": "JS GraphQL"
+        },
+        "introspect": false
       }
     }
   }
